Prevent zoom on mobile devices - iOS particularly

--- a/src/less/component/search/_base.less
+++ b/src/less/component/search/_base.less
@@ -12,7 +12,7 @@
     height: @button-height;
     padding: 10px 8px;
     margin: 0 @button-height 0 0;
-    font-size: @font14;
+    font-size: @font16;
     background: @ls-ui-input-background;
     border: none;
     -webkit-border-radius: 0;
